--- a/src/Products/Product.css
+++ b/src/Products/Product.css
@@ -1,75 +1,73 @@
-*{
-    font-family: sans-serif;
-    font-size: 2vw;
+* {
+  font-family: sans-serif;
+  font-size: 2vw;
 }
 .MainContainer {
-    width: 90vw;
-    height: 50vw;
-    z-index: 10;
-    /* background-color: black; */
-    position: absolute;
-    left: 5%;
-    top:10%;
-    margin-inline: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    
- gap: 10vw;
-    opacity: 0.3;
+  width: 90vw;
+  height: 50vw;
+  z-index: 10;
+  /* background-color: black; */
+  position: absolute;
+  left: 5%;
+  top: 10%;
+  margin-inline: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 
-
+  gap: 10vw;
+  opacity: 0.3;
 }
 
-
-.left-portion{
-    display: flex;
-    flex-direction: column;
-    /* background-color: cyan; */
-    align-items: center;
-    justify-content: space-between;
-    z-index: 10;
-    width: 30vw;
-    height: 40vh;
-
-
+.left-portion {
+  display: flex;
+  flex-direction: column;
+  /* background-color: cyan; */
+  align-items: center;
+  justify-content: space-between;
+  z-index: 10;
+  width: 30vw;
+  height: 40vh;
 }
-.right-portion{
-    display: flex;
-    flex-direction: column;
-    /* background-color: cyan; */
-    align-items: center;
-    justify-content:space-between;
-    z-index: 10;
-    
-    
-    
-    width: 30vw;
-    height: 40vh;
+.right-portion {
+  opacity: 1;
+  display: flex;
+  flex-direction: column;
+  /* background-color: cyan; */
+  align-items: center;
+  justify-content: space-between;
+  z-index: 10;
 
+  width: 30vw;
+  height: 40vh;
+}
+.left-portion > div {
+  background-color: rgba(47, 54, 255, 0);
+  /* position: absolute; */
+  color: rgba(0, 0, 0, 0.482);
+  width: 20vw;
+  height: 10vh;
+  border: 2px solid white;
+  border-radius: 15px;
 
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.left-portion > div{
-    background-color: rgba(47, 54, 255, 0.406);
-    /* position: absolute; */
-    width: 20vw;
-    height: 10vh;
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
-.right-portion > div{
-    background-color: rgba(47, 54, 255, 0.406);
-    /* background-color: yellow; */
-/* position: absolute; */
-width: 20vw;
-height: 10vh;
-z-index: 10;
- display: flex;
-    align-items: center;
-    justify-content: center;
+.right-portion > div {
+  background-color: rgba(47, 54, 255, 0);
+  /* position: absolute; */
+  color: rgba(0, 0, 0, 0.482);
+  width: 20vw;
+  height: 10vh;
+  border: 2px solid white;
+  border-radius: 15px;
+
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* .right-portion > div :hover{
     background-color: rgba(47, 255, 241, 0.52);
@@ -80,5 +78,5 @@ z-index: 10;
 
 .left-portion > div:hover,
 .right-portion > div:hover {
-    background-color: rgba(47, 255, 241, 0.52);
+  background-color: rgba(47, 255, 241, 0.52);
 }
