--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,23 @@
 html,
 body,
-#root
-{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: ivory;
+#root {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: ivory;
+}
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.ARButton {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 9999; /* Ensure button is above other elements */
+  /* Add more styling as needed */
 }
