--- a/src/Pages/VoiceChat.css
+++ b/src/Pages/VoiceChat.css
@@ -1,10 +1,29 @@
- #video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, 300px);
-            grid-auto-rows: 300px;
-        }
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+video {
+  display: none;
+}
+#video-grid {
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, 10px);
+  grid-auto-rows: 10px; */
+}
+audio {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#audio-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+}
+
+/* Style for the mute buttons */
+button {
+  /* margin-top: 10px; */
+  border: 2px solid black;
+  margin-inline: auto;
+  font-size: x-small;
+  z-index: 9999;
+  /* margin-left: 4rem; */
+}
